--- a/jadaptive-virtual-sftp/pom.xml
+++ b/jadaptive-virtual-sftp/pom.xml
@@ -28,6 +28,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.jadaptive</groupId>
+			<artifactId>jadaptive-ssh-server</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>vfs-s3</artifactId>
 			<version>3.1.0-SNAPSHOT</version>
