--- a/jadaptive-virtual-sftp/pom.xml
+++ b/jadaptive-virtual-sftp/pom.xml
@@ -17,7 +17,7 @@
 		<plugin.class>com.jadaptive.plugins.ssh.vsftp.VirtualSFTPPlugin</plugin.class>
 		<plugin.version>${project.version}</plugin.version>
 		<plugin.provider>JADAPTIVE Limited</plugin.provider>
-		<plugin.dependencies></plugin.dependencies>	
+		<plugin.dependencies>jadaptive-ssh-server</plugin.dependencies>	
 	</properties>
 
 	<dependencies>
