--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<!-- Override below properties in each plugin's pom.xml -->
+		<plugin.id />
+		<plugin.class />
+		<plugin.version />
+		<plugin.provider />
+		<plugin.dependencies />
 	</properties>
 
 	<build>
