--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<scm>
 		<url>http://github.com/ludup/jadaptive-plugins</url>
 		<connection>scm:git:https://github.com/ludup/jadaptive-plugins</connection>
-		<developerConnection>scm:git:https://github.com/ludup/jadaptive-plugind</developerConnection>
+		<developerConnection>scm:git:https://github.com/ludup/jadaptive-plugins</developerConnection>
 	</scm>
 
 	<developers>
@@ -26,6 +26,8 @@
 
 	<modules>
 		<module>jadaptive-virtual-sftp</module>
+		<module>jadaptive-virtual-sftp-gcs</module>
+		<module>jadaptive-virtual-sftp-s3</module>
 	</modules>
 
 	<dependencies>
@@ -78,5 +80,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>oss-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+	</repositories>
 
+		
 </project>
