--- a/jadaptive-virtual-sftp/pom.xml
+++ b/jadaptive-virtual-sftp/pom.xml
@@ -18,7 +18,7 @@
 		<plugin.version>${project.version}</plugin.version>
 		<plugin.provider>JADAPTIVE Limited</plugin.provider>
 		<plugin.projectUrl>https://github.com/ludup/jadpative-vsftp</plugin.projectUrl>
-		<plugin.dependencies>jadaptive-ssh-server,jadaptive-ssh-management</plugin.dependencies>	
+		<plugin.dependencies>jadaptive-ssh-management,jadaptive-ssh-server</plugin.dependencies>	
 	</properties>
 
 	<dependencies>
