--- a/jadaptive-virtual-sftp-gcs/pom.xml
+++ b/jadaptive-virtual-sftp-gcs/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.2</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-gcs</artifactId>
