--- a/jadaptive-virtual-sftp-s3/pom.xml
+++ b/jadaptive-virtual-sftp-s3/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-s3</artifactId>
