--- a/jadaptive-virtual-sftp/pom.xml
+++ b/jadaptive-virtual-sftp/pom.xml
@@ -18,7 +18,7 @@
 		<plugin.version>${project.version}</plugin.version>
 		<plugin.provider>JADAPTIVE Limited</plugin.provider>
 		<plugin.projectUrl>https://github.com/ludup/jadpative-vsftp</plugin.projectUrl>
-		<plugin.dependencies>jadaptive-ssh-management,jadaptive-ssh-server</plugin.dependencies>	
+		<plugin.dependencies>jadaptive-ssh-server</plugin.dependencies>	
 	</properties>
 
 	<dependencies>
@@ -31,12 +31,6 @@
 		<dependency>
 			<groupId>com.jadaptive</groupId>
 			<artifactId>jadaptive-boot</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.jadaptive</groupId>
-			<artifactId>jadaptive-ssh-management</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
