--- a/jadaptive-virtual-sftp-s3/pom.xml
+++ b/jadaptive-virtual-sftp-s3/pom.xml
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>vfs-s3</artifactId>
-			<version>3.2.0-SNAPSHOT</version>
+			<version>3.2.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.commons</groupId>
