--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jadaptive</groupId>
 	<artifactId>jadaptive-vsftp</artifactId>
-	<version>0.1.8</version>
+	<version>0.1.9-SNAPSHOT</version>
 	<url>https://jadaptive.com</url>
 	<packaging>pom</packaging>
 	<name>VSFTP Plugins</name>
@@ -29,6 +29,7 @@
 		<module>jadaptive-virtual-sftp-gcs</module>
 		<module>jadaptive-virtual-sftp-s3</module>
 		<module>jadaptive-virtual-sftp-azure</module>
+		<module>jadaptive-virtual-sftp-dropbox</module>
 	</modules>
 
 	<dependencies>
