--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /target/
 /.project
 /.settings/
+/jadaptive-virtual-sftp-windows/.classpath
+/jadaptive-virtual-sftp-windows/.project
+/jadaptive-virtual-sftp-windows/plugin.properties
+/jadaptive-virtual-sftp-sftp/.project
+/jadaptive-virtual-sftp-sftp/plugin.properties
+/jadaptive-virtual-sftp-sftp/.classpath
+/jadaptive-virtual-sftp-local/.classpath
+/jadaptive-virtual-sftp-local/.project
+/jadaptive-virtual-sftp-local/plugin.properties
