Created VSFTP product plugin.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /jadaptive-virtual-sftp-local/.classpath
 /jadaptive-virtual-sftp-local/.project
 /jadaptive-virtual-sftp-local/plugin.properties
+/jadaptive-virtual-sftp-product/.settings/
+/jadaptive-virtual-sftp-product/.classpath
+/jadaptive-virtual-sftp-product/.project
+/jadaptive-virtual-sftp-product/plugin.properties
