--- a/jadaptive-virtual-sftp-sftp/pom.xml
+++ b/jadaptive-virtual-sftp-sftp/pom.xml
@@ -4,7 +4,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.1.9-SNAPSHOT</version>
+		<version>0.2.0</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-sftp</artifactId>
