--- a/jadaptive-virtual-sftp-dropbox/pom.xml
+++ b/jadaptive-virtual-sftp-dropbox/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.2.0</version>
+		<version>0.2.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-dropbox</artifactId>
