--- a/jadaptive-virtual-sftp/pom.xml
+++ b/jadaptive-virtual-sftp/pom.xml
@@ -18,7 +18,7 @@
 		<plugin.version>${project.version}</plugin.version>
 		<plugin.provider>JADAPTIVE Limited</plugin.provider>
 		<plugin.projectUrl>https://github.com/ludup/jadpative-vsftp</plugin.projectUrl>
-		<plugin.dependencies>jadaptive-ssh-server,jadaptive-web-management,jadaptive-ssh-synergy,jadaptive-email</plugin.dependencies>	
+		<plugin.dependencies>jadaptive-ssh-server,jadaptive-ssh-synergy,jadaptive-email</plugin.dependencies>	
 	</properties>
 
 	<dependencies>
@@ -43,12 +43,6 @@
 		<dependency>
 			<groupId>com.jadaptive</groupId>
 			<artifactId>jadaptive-email</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.jadaptive</groupId>
-			<artifactId>jadaptive-web-management</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
