--- a/jadaptive-virtual-sftp-local/pom.xml
+++ b/jadaptive-virtual-sftp-local/pom.xml
@@ -4,7 +4,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.2.1</version>
+		<version>0.2.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-local</artifactId>
