--- a/jadaptive-virtual-sftp-s3/pom.xml
+++ b/jadaptive-virtual-sftp-s3/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>vfs-s3</artifactId>
-			<version>3.3.0</version>
+			<version>4.0.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.commons</groupId>
