--- a/jadaptive-virtual-sftp/pom.xml
+++ b/jadaptive-virtual-sftp/pom.xml
@@ -77,7 +77,7 @@
 		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>vfs-sftp</artifactId>
-			<version>3.3.0</version>
+			<version>4.0.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
