--- a/jadaptive-virtual-sftp-product/pom.xml
+++ b/jadaptive-virtual-sftp-product/pom.xml
@@ -4,7 +4,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.3.0</version>
+		<version>0.4.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-product</artifactId>
