--- a/jadaptive-virtual-sftp-sftp/pom.xml
+++ b/jadaptive-virtual-sftp-sftp/pom.xml
@@ -4,7 +4,7 @@
 		<groupId>com.jadaptive</groupId>
 		<artifactId>jadaptive-vsftp</artifactId>
 		<relativePath>..</relativePath>
-		<version>0.3.1-SNAPSHOT</version>
+		<version>0.3.1</version>
 	</parent>
 
 	<artifactId>jadaptive-virtual-sftp-sftp</artifactId>
