--- a/jadaptive-virtual-sftp-azure/pom.xml
+++ b/jadaptive-virtual-sftp-azure/pom.xml
@@ -100,23 +100,16 @@
 			<plugin>
 				<groupId>com.sshtools</groupId>
 				<artifactId>pf4j-plugin-generator</artifactId>
-				<version>0.1.0</version>
-				<executions>
-					<execution>
-						<id>generate-plugin</id>
-						<phase>install</phase>
-						<goals>
-							<goal>generate-plugin</goal>
-						</goals>
-					</execution>
-				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<configuration>
-					<skip>true</skip>
+					<skip>false</skip>
 				</configuration>
-				<version>2.8.2</version>
 			</plugin>
 		</plugins>
 	</build>
