--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,17 @@
 			<email>lee@jadaptive.com</email>
 		</developer>
 	</developers>
+	
+	<distributionManagement>
+		<repository>
+			<id>libs-releases-local</id>
+			<url>https://artifactory.jadaptive.com/libs-releases-local</url>
+		</repository>
+		<snapshotRepository>
+			<id>libs-snapshots</id>
+			<url>https://artifactory.jadaptive.com/libs-snapshots-local</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<modules>
 		<module>jadaptive-virtual-sftp</module>
@@ -77,17 +88,94 @@
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
+		
+		
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-extension-zip</id>
+						<phase>install</phase>
+						<goals>
+							<goal>attach-artifact</goal>
+						</goals>
+						<configuration>
+							<skipAttach>false</skipAttach>
+							<artifacts>
+								<artifact>
+									<file>
+										${project.build.directory}/plugin-def/${project.artifactId}/${project.artifactId}-${project.version}.zip</file>
+									<type>zip</type>
+									<classifier>jadx</classifier>
+								</artifact>
+							</artifacts>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
-				<version>2.8.2</version>
 			</plugin>
 		</plugins>
+		
+		
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>3.2.0</version>
+				</plugin>
+				<plugin>
+					<groupId>com.sshtools</groupId>
+					<artifactId>pf4j-plugin-generator</artifactId>
+					<version>0.1.0</version>
+					<executions>
+						<execution>
+							<id>generate-plugin</id>
+							<phase>install</phase>
+							<goals>
+								<goal>generate-plugin</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.12.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>3.1.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<repositories>
+		<repository>
+			<id>libs-snapshots-local</id>
+			<snapshots/>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<url>https://artifactory.jadaptive.com/libs-snapshots-local/</url>
+		</repository>
+		<repository>
+			<id>libs-releases-local</id>
+			<releases/>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<url>https://artifactory.jadaptive.com/libs-releases-local/</url>
+		</repository>
 		<repository>
 			<id>oss-snapshots</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
