Initial commit of debian repository plugin

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<module>jadaptive-virtual-sftp-dropbox</module>
 		<module>jadaptive-virtual-sftp-windows</module>
 		<module>jadaptive-virtual-sftp-sftp</module>
+		<module>jadaptive-debian-repository</module>
 	</modules>
 
 	<dependencies>
