It seems we do need to publish the parent pom (all children refer to it). However, having the jadx attach configuration in the parent means it tries to attach a zip for the root as well. So we have to disable attaching by default, and the explicitly enable it in all children. The specific deploy configuration can be removed to make up for this.

--- a/jadaptive-debian-repository/pom.xml
+++ b/jadaptive-debian-repository/pom.xml
@@ -48,12 +48,6 @@
 			<scope>provided</scope>
 		</dependency>
 		
-		<dependency>
-			<groupId>com.sshtools</groupId>
-			<artifactId>forker-client</artifactId>
-			<version>1.8-SNAPSHOT</version>
-		</dependency>
-		
 	</dependencies>
 
 	<build>
@@ -65,12 +59,8 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
 				<configuration>
-					<skip>false</skip>
+					<skipAttach>false</skipAttach>
 				</configuration>
 			</plugin>
 		</plugins>
