--- a/jadaptive-virtual-sftp-gcs/pom.xml
+++ b/jadaptive-virtual-sftp-gcs/pom.xml
@@ -82,11 +82,8 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
 				<configuration>
-					<skip>false</skip>
+					<skipAttach>false</skipAttach>
 				</configuration>
 			</plugin>
 		</plugins>
